Added repo to package.json

--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "Git",
     "Repo"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/robbiegleeson/repo.git"
+  },
   "author": "Rob Gleeson",
   "license": "ISC",
   "dependencies": {
