--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Open Git project page from the command line",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "bin": {
     "repo": "./index.js"
@@ -23,5 +23,8 @@
     "colors": "^1.1.2",
     "ini": "^1.3.4",
     "open": "0.0.5"
+  },
+  "devDependencies": {
+    "jest": "^20.0.4"
   }
 }
