--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "colors": "^1.1.2",
     "ini": "^1.3.4",
-    "open": "0.0.5"
+    "open": "0.0.5",
+    "request": "^2.81.0"
   },
   "devDependencies": {
     "jest": "^20.0.4"
