--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest"
   },
   "bin": {
-    "repo": "./index.js"
+    "repo": "./indexV2.js"
   },
   "keywords": [
     "Git",
@@ -21,8 +21,10 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.1.2",
+    "commander": "^5.1.0",
     "ini": "^1.3.4",
     "open": "0.0.5",
+    "prompts": "^2.3.2",
     "request": "^2.81.0"
   },
   "devDependencies": {
